--- a/config/ZaruBall.conf
+++ b/config/ZaruBall.conf
@@ -3,7 +3,7 @@
 
 CONFIG_PMW3610=y
 CONFIG_INPUT=y
-CONFIG_PMW3610_AUTOMOUSE_TIMEOUT_MS=500
+# CONFIG_PMW3610_AUTOMOUSE_TIMEOUT_MS=500
 # CONFIG_PMW3610_SCROLL_TICK=16
 # CONFIG_PMW3610_INVERT_SCROLL_X=y
 # CONFIG_PMW3610_INVERT_SCROLL_Y=n
