--- a/build.yaml
+++ b/build.yaml
@@ -23,7 +23,7 @@ include:
   - board: seeeduino_xiao_ble
     shield: ZaruBall_right rgbled_adapter
   - board: seeeduino_xiao_ble
-    shield: ZaruBall_dongle prospector_adapter
+    shield: ZaruBall_dongle prospector_adapter rgbled_adapter
     snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: seeeduino_xiao_ble
