--- a/config/ZaruBall.conf
+++ b/config/ZaruBall.conf
@@ -11,6 +11,7 @@ CONFIG_INPUT=y
 # CONFIG_PMW3610_INVERT_SCROLL_X=y
 # CONFIG_PMW3610_INVERT_SCROLL_Y=n
 # CONFIG_PMW3610_SMART_ALGORITHM=y
+# CONFIG_PMW3610_CPI=1800
 
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
@@ -43,5 +44,3 @@ CONFIG_RGBLED_WIDGET_LAYER_3_COLOR=4
 CONFIG_RGBLED_WIDGET_LAYER_4_COLOR=5
 CONFIG_RGBLED_WIDGET_LAYER_5_COLOR=2
 CONFIG_RGBLED_WIDGET_LAYER_6_COLOR=3
-
-CONFIG_PMW3610_CPI=1800
